comment section indicator fixed on mobile

--- a/client/src/components/modules/Posts/Post.css
+++ b/client/src/components/modules/Posts/Post.css
@@ -60,8 +60,8 @@
 }
 
 .post-commentSectionIndicator {
-  height: 3vh;
-  font-size: 15px;
+  height: 1.5em;
+  font-size: var(--m);
   color: grey;
 }
 
